[package]
name = "incognichat"
version = "0.1.0"
edition = "2021"

# Reference binaries start.
[[bin]]
name = "server"
path = "./src/ref/server.rs"

[[bin]]
name = "client"
path = "./src/ref/client.rs"
# Reference binaries end.

[[bin]]
name = "backend"
path = "./src/backend.rs"

[[bin]]
name = "frontend"
path = "./src/frontend.rs"

[dependencies]
chrono = "0.4.39"
crossterm = "0.28.1"
getrandom = "0.3.1"
mio = "1.0.3"
